Fix issue with lengthy .btn elements overflowing at small screen sizes

--- a/sass/template/_format.scss
+++ b/sass/template/_format.scss
@@ -249,6 +249,7 @@ img {
 	letter-spacing: 2px;
 	padding: 15px 20px;
 	text-transform: uppercase;
+	white-space: normal;
 	.entry-content & {
 		text-decoration: none;
 	}
